--- a/package.json
+++ b/package.json
@@ -13,16 +13,15 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-<<<<<<< HEAD
-=======
     "react-hook-form": "^7.56.3",
->>>>>>> 7bbcb4eba4eb5d1151467f36b30aaeb05cbbaaa1
     "react-icons": "^5.5.0",
     "react-router": "^7.5.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
