--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
+    "bootstrap-icons": "^1.13.1",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.487.0",
