--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^5.1.1",
     "@mui/material": "^7.1.0",
     "bootstrap-icons": "^1.13.1",
     "date-fns": "^4.1.0",
@@ -19,11 +20,12 @@
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.3",
+    "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
