--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
+    "react-paginate": "^8.3.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
     "xlsx": "^0.18.5",
