--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-paginate": "^8.3.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
+    "react-select": "^5.10.1",
     "xlsx": "^0.18.5",
     "zod": "^3.25.67"
   },
