--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.21.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.1.1",
     "@mui/material": "^7.1.0",
+    "@table-library/react-table-library": "^4.1.15",
     "bootstrap-icons": "^1.13.1",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
