--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@chakra-ui/react": "^3.21.1",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.1.1",
-    "@mui/material": "^7.1.0",
+    "@mui/material": "^7.2.0",
     "@table-library/react-table-library": "^4.1.15",
     "bootstrap-icons": "^1.13.1",
     "date-fns": "^4.1.0",
@@ -24,12 +24,14 @@
     "lucide-react": "^0.487.0",
     "primereact": "^10.9.6",
     "react": "^19.0.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
+    "react-search-box": "^3.0.0",
     "react-select": "^5.10.1",
     "xlsx": "^0.18.5",
     "zod": "^3.25.67"
