--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.1.1",
     "@mui/material": "^7.2.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@table-library/react-table-library": "^4.1.15",
+    "antd": "^5.26.4",
+    "axios": "^1.10.0",
     "bootstrap-icons": "^1.13.1",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
@@ -27,12 +30,15 @@
     "react-date-range": "^2.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
     "react-search-box": "^3.0.0",
     "react-select": "^5.10.1",
+    "react-spinners": "^0.17.0",
     "xlsx": "^0.18.5",
     "zod": "^3.25.67"
   },
