--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@chakra-ui/react": "^3.21.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
@@ -22,12 +23,14 @@
     "bootstrap-icons": "^1.13.1",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
+    "graphql": "^16.11.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.487.0",
     "primereact": "^10.9.6",
     "react": "^19.0.0",
     "react-date-range": "^2.0.1",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
     "react-hot-toast": "^2.5.2",
